fix(trips-itinerary): fix design errors on the trip itinerary page  - show date picker when text box is clicked - placeholders left aligned - text box borders align with calendar border [Finishes #165345156]

--- a/src/app/admin/date-picker/date-picker.component.scss
+++ b/src/app/admin/date-picker/date-picker.component.scss
@@ -16,15 +16,16 @@
     outline: none;
     border-radius: 5px 0px 0px 5px;
     float: left;
-    text-align: center;
+    text-align: left;
     border: 1px solid #e9eff4;
     border-right: none;
+    text-indent: 10px;
     font-size: 14px;
   }
 }
 
 .mat-datepicker-toggle {
-  height: 39px;
+  height: 40px;
   float: left;
   border: 1px solid #e9eff4;
   background: rgba(251, 252, 253, 0.49);
