--- a/src/app/admin/layouts/custom-dropdown/custom-dropdown.component.scss
+++ b/src/app/admin/layouts/custom-dropdown/custom-dropdown.component.scss
@@ -29,7 +29,7 @@ select {
   margin: 0;
   padding: 0 0 0 .5em;
   color: #929FB0;
-  text-indent: 9px;
+  text-indent: 5px;
   cursor: pointer;
 }
 select::-ms-expand {
